[tool.poetry]
name = "go-to-google"
version = "0.1.0"
description = "UI тест с переходом в Гугл"
authors = ["musmanova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.38.0"
pytest = "^7.5.1"
pytest-playwright = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
